--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,29 @@ body {
     background-color: aquamarine;
 }
 
-ul, li {
+.navbar-nav {
+    font-size: 18px;
+}
+
+.navbar-header a {
+    font-size: 22px;
+}
+
+.navbar {
+    padding: 10px 5px;
+}
+
+footer {
+    background-color: black;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 30px;
+}
+
+footer p {
+    font-size: 16px;
+    color: white;
     text-align: center;
 }
