--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    padding: 30px;
+    padding: 5px;
 }
 
 footer p {
@@ -35,4 +35,54 @@ p {
     font-size: 18px;
     padding: 10px;
     margin: 20px;
+}
+
+
+
+
+
+
+
+
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/loja.jpg');
+    height: 800px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+  
+  .hero-text button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 10px 25px;
+    color: black;
+    background-color: #ddd;
+    text-align: center;
+    cursor: pointer;
+  }
+  
+  .hero-text button:hover {
+    background-color: #555;
+    color: white;
+  }
+
+h1 {
+    font-size: 60px;
 }
