--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,9 +38,17 @@ p {
 }
 
 
+/* .form-cliente {
+  font-size: 20px;
+} */
 
-
-
+input{
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: 3px solid white;
+  background-color: #11004e;
+  margin-bottom: 5px;
+}
 
 
 
