--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
 body {
-    background-color: #11004e;
-    color: #FFF
-    
+    background-color: darkblue;
+    background-image: linear-gradient(to bottom right, darkblue, black);
+    color: #FFF;
+    font-family: 'Amiko'!important;
 }
 
 .navbar-nav {
@@ -14,6 +15,7 @@ body {
 
 .navbar {
     padding: 10px 5px;
+    margin-bottom: 0px;
 }
 
 footer {
@@ -60,7 +62,7 @@ body, html {
   
   .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/loja.jpg');
-    height: 800px;
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
